test/resources/typer/failing/MatchFailConstructor.scala
object MatchFail {
  3 match {
    case _ => 1
    case Nil() => 2
  }
}
